--- a/src/main/webapp/resources/livro.css
+++ b/src/main/webapp/resources/livro.css
@@ -89,3 +89,40 @@ button-adicionar-livro:hover {
 .livroForm {
     font-family: 'URW Chancery L', cursive;
 }
+
+
+
+
+
+.styled-table {
+    width: 100%;
+    border-collapse: collapse;
+    margin: 25px 0;
+    font-size: 0.9em;
+    font-family: 'URW Chancery L', cursive;
+    min-width: 400px;
+}
+
+.styled-table thead tr {
+    background-color: #009879;
+    color: #ffffff;
+    text-align: left;
+}
+
+.styled-table th,
+.styled-table td {
+    padding: 12px 15px;
+}
+
+.styled-table tbody tr {
+    border-bottom: 1px solid #dddddd;
+}
+
+.styled-table tbody tr:nth-of-type(even) {
+    background-color: #f3f3f3;
+}
+
+.styled-table tbody tr:last-of-type {
+    border-bottom: 2px solid #009879;
+}
+
