--- a/src/main/webapp/resources/livro.css
+++ b/src/main/webapp/resources/livro.css
@@ -1,21 +1,42 @@
+.header-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 20px;
+    width: 100%;
+}
+
+.search-container {
+    display: flex;
+    align-items: center;
+    width: 50%;
+}
+
+.input-field {
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size: 1.1em;
+    margin-top: 2%;
+    margin-bottom: 4%;
+    width: 100%;
+    height: 28px;
+    align-items: center;
+}
+
 .form-panel {
     padding: 20px;
-    background-color: #d9d9d9;
+    background-color: #009879;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     width: 100%;
     font-size: 1.1em;
 }
 
-.form-container {
-    background-color: #d9d9d9;
-    display: flex;
-    flex-direction: column;
-}
-
 .form-grid {
     width: 100%;
     margin-bottom: 20px;
-        font-family: 'URW Chancery L', cursive;
+    font-family: 'URW Chancery L', cursive;
+    background-color: #009879;
 }
 
 .label {
@@ -40,17 +61,20 @@
 .button-container {
     display: flex;
     justify-content: flex-end;
-    gap: 10px;
+    gap: 55px;
     margin-top: 20px;
 }
 
-.save-button, .cancel-button {
-    background-color: #4CAF50;
+.save-button,
+.cancel-button {
+    background-color: #009879;
     color: white;
     border: none;
-    padding: 10px 20px;
+    padding: 20px 30px;
     border-radius: 4px;
     cursor: pointer;
+    width: 160px;
+    height: 40px;
 }
 
 .save-button:hover {
@@ -61,15 +85,19 @@
     background-color: #e53935;
 }
 
-.button-adicionar-livro {
-    background-color: #008CBA;
+.button-adicionar-livro,
+.button-pesquisar {
+    background-color: #009879;
     color: white;
     border: none;
     padding: 10px 20px;
     border-radius: 4px;
     cursor: pointer;
+    margin-left: 10px;
     margin-top: 2%;
     margin-bottom: 4%;
+    width: 160px;
+    height: 40px;
 }
 
 button-adicionar-livro:hover {
@@ -90,6 +118,26 @@ button-adicionar-livro:hover {
     font-family: 'URW Chancery L', cursive;
 }
 
+.edit-button, .delete-button {
+    background-color: #009879; /* cor de fundo */
+    color: white; /* cor do texto */
+    border: none; /* sem borda */
+    padding: 10px 20px; /* padding */
+    border-radius: 4px; /* borda arredondada */
+    cursor: pointer; /* cursor pointer */
+    width: 95px; /* largura fixa */
+    height: 40px; /* altura fixa */
+    text-align: center; /* alinhamento do texto */
+    display: inline-block; /* exibir como bloco inline */
+}
+
+.edit-button:hover {
+    background-color: #45a049; /* cor ao passar o mouse */
+}
+
+.delete-button:hover {
+    background-color: #e53935; /* cor ao passar o mouse */
+}
 
 
 
