--- a/src/main/webapp/resources/livro.css
+++ b/src/main/webapp/resources/livro.css
@@ -26,7 +26,7 @@
 
 .form-panel {
     padding: 20px;
-    background-color: #009879;
+    background-color: #e6e6e6;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     width: 100%;
     font-size: 1.1em;
@@ -43,6 +43,7 @@
     font-weight: bold;
     text-align: right;
     padding-right: 10px;
+    font-family: 'URW Chancery L', cursive;
 }
 
 .value {
@@ -56,6 +57,7 @@
 .textarea-field {
     width: 100%;
     padding: 8px;
+    font-family: 'URW Chancery L', cursive;
 }
 
 .button-container {
@@ -75,6 +77,7 @@
     cursor: pointer;
     width: 160px;
     height: 40px;
+    font-family: 'URW Chancery L', cursive;
 }
 
 .save-button:hover {
